plan, payment, profile on progress

--- a/project-X/Plex.html
+++ b/project-X/Plex.html
@@ -27,6 +27,12 @@
             <div class="profile-container">
                 <button class="reg">Register</button>
                 <button class="sign-in">Sign in</button>
+                <div class="profile">
+                    <div class="profile-pictuer">
+                        <img src="img/profile.jpg" alt="" class="pro-img">
+                    
+                </div>
+                <h4 class="pro-name">Name</h4></div>
             </div>
             
         </div>
