profile, Pro_plan and settings

--- a/project-X/setting.html
+++ b/project-X/setting.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="setting.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Sen:wght@400;700;800&display=swap" 
           rel="stylesheet">
-    <title>Profile</title>
+    <title>settings</title>
 </head>
 <body>
     <div class="profile">
@@ -38,7 +38,7 @@
         </div>
         <div class="profile_container_">
             <form action="">
-                <h4 class="infoo">Personal Information</h4>
+                <fieldset><legend><h4>Personal Information</h4></legend>
                     <div class="input-control">
                         <div class="Fname">
                              <input id="text-input-firstName" aria-describedby="error-text-input-firstName" name="firstName" class="web-text-input__input" maxlength="60" autocomplete="given-name">
@@ -88,7 +88,7 @@
                         <button class="submit-container"  value="send" name="send">Edit Info</button>
                         <button class="submit-container"  value="send" name="send">Submit</button>
                     </div>
-                
+                </fieldset>
                 
             </form>
         </div>
