plan transfer to payment, update & delete

--- a/project-X/Plex.html
+++ b/project-X/Plex.html
@@ -28,12 +28,14 @@
                 <div id="butn">
                     <button class="reg">Register</button>
                     <button class="sign-in">Sign in</button>
+                    
                 </div>
                 
                 <div class="profile">
                     <div class="profile-pictuer">
                         <!-- <img src="img/profile.jpg" alt="" class="pro-img"> -->
-                        <h4 id="pro-name">Name</h4>
+                        <!-- <a href="profile.html"id="pro-name">Name</a> -->
+                        <a id="pro-name" href="profile.html">Name</a>
                     </div>
                 </div>
             </div>
