logout and remove implementation

--- a/project-X/profile.html
+++ b/project-X/profile.html
@@ -123,25 +123,25 @@
     </div>
     <div class="profile_container_y">
         <h2 class="pro__name">MEMBERS</h2>
-        <div class="plan_tile_1_">
+        <div id="plan_tile_1_" class="plan_tile_1_">
             <img src="img/profile.jpg" alt="" class="member_img">
             <h3 class="mem_name">Michael D. Abebe</h3>
             <h4 class="mem_plan">Plex (No Ads)</h4>
-            <button class="mem_btn">Remove</button>
+            <button id="remove_1" class="mem_btn">Remove</button>
         </div>
-        <div class="plan_tile_2_">
+        <div id="plan_tile_2_" class="plan_tile_2_">
             <img src="img/profile.jpg" alt="" class="member_img">
             <h3 class="mem_name">Michael D. Abebe</h3>
             <h4 class="mem_plan">Plex (No Ads)</h4>
-            <button class="mem_btn">Remove</button>
+            <button id="remove_2" class="mem_btn">Remove</button>
         </div>
-        <div class="plan_tile_3_">
+        <div id="tile_3"class="plan_tile_3_">
             <i class="fa-solid fa-circle-plus Plus_"></i>
         </div>
         <div class="line"></div>
         <div class="log_out">
             <i class="fa-solid fa-right-from-bracket logout"></i>
-            <h3 class="log-out">logout</h3>
+            <a id="log_out" href="login.html" class="log-out">logout</h3>
         </div>
     </div>
     <script src="app.js"></script>
