--- a/project-X/Plan.html
+++ b/project-X/Plan.html
@@ -18,7 +18,7 @@
                 <div class="plan-containt">
                     <h3 class="plan_price_">PLEX (No Ads)</h3>
                     <p class="plan-desc"> For $14.99/month, you can watch most of those same shows and movies without the ad breaks. Plex (No Ads) excludes a few shows that play with ads before and after the video.</p>
-                    <button id="plan_1" class="get-">Try for free</button>
+                    <button id="plan_1" class="get-">Get Plan</button>
                 </div>
             </di>
             <div class="plan-tile_2">
@@ -27,14 +27,14 @@
                     <h3 class="plan_price">PLEX/kids</h3>
                     <p class="plan-desc-"> Our ad-supported plan costs just $7.99/month (or $79.99/year) and gives you access to our ad-supported streaming library.</p>
                     <p class="plan-desc-"> Students: Get Plex (ad-supported) for $1.99/month, if eligible.</p>
-                    <button id="plan_2" class="get">Try for free</button>
+                    <button id="plan_2" class="get-">Get Plan</button>
                 </div>
             </div>
             <div class="plan-tile_3">
                 <div class="plan-containt">
                     <h3 class="plan_price-">PLEX + Live TV plans</h3>
                     <p class="plan-desc__"> For $82.99/month, you can stream almost all videos from our streaming library without ads. Take advantage of everything our Live TV plan has to offer — plus additional content Live soccer (With Ads). </p>
-                    <button id="plan_3" class="get_">Try for free</button>
+                    <button id="plan_3" class="get-">Get Plan</button>
                 </div>
             </div>
         </div>
@@ -80,6 +80,6 @@
             </div>
         </footer>
     </div>
+    <script src="plan.js"></script>
 </body>
 </html>
-<script src="plan.js"></script>
