--- a/project-X/register.html
+++ b/project-X/register.html
@@ -73,9 +73,9 @@
                         <div id="error"></div>
                     </div>
                     <div class="input-control">
-                        <div class="date">
+                        <div class="Birth date">
                             <input id="text-input-Date" type="date" name="date" class="web-text-input__input">
-                            <label for="text-input-EmailName"  class="web-text-input__label">Date</label>
+                            <label for="text-input-EmailName"  class="web-text-input__label">Birth Date</label>
                             <!-- <label for="date">Date</label></td>
                             <input type="date" name="date" id="date" min="2023-02-05" max="2023-03-05"></td> -->
                         </div>
